--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "main",
+  "name": "sveplussass",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -11,12 +11,11 @@
   "devDependencies": {
     "@sveltejs/adapter-netlify": "^1.0.0-next.35",
     "@sveltejs/kit": "next",
+    "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.42.6"
+    "svelte": "^3.42.6",
+    "svelte-preprocess": "^4.9.8"
   },
-  "type": "module",
-  "dependencies": {
-    "svelte-paginate": "^0.0.1"
-  }
+  "type": "module"
 }
